# ArgusAi

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dashboard  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  start-web-test.bat  start.bat
.github/workflows/: ci.yml
.streamlit/: config.toml
argus/: __init__.py  correlator.py  detectors.py  dna.py  explainer.py  features.py  profile.py  rules.py  schema.py  scorer.py  statistics.py
argus.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
argus/api/: __init__.py  dependencies.py  middleware.py  server.py
argus/api/routes/: __init__.py  alerts.py  dna.py  events.py  health.py  users.py
argus/collectors/: __init__.py  auth_collector.py  base.py  file_collector.py  network_collector.py  normalize.py  simulate.py
argus/dashboard/: __init__.py  api_client.py  app.py  styles.py
argus/dashboard/components/: __init__.py  charts.py  metric_cards.py  risk_badge.py
argus/dashboard/pages/: 1_Overview.py  2_Live_Alerts.py  3_User_Profiles.py  4_Threat_Map.py  5_Behavioral_DNA.py  __init__.py
argus/integrations/: __init__.py  threat_intel.py
argus/storage/: __init__.py  base.py  memory_store.py  sqlite_store.py
argus/synthetic/: __init__.py  generator.py
docs/: SETUP_MANUAL.md  architecture.md
tests/: conftest.py  test_phase1_core.py  test_phase2_storage.py  test_phase3_ml.py  test_phase4_correlation.py  test_phase5_api.py  test_phase7_collectors.py  test_phase9_dna.py
web-test/: .env.example  TESTING.md  index.html  package-lock.json  package.json  tailwind.config.js
web-test/src/: App.jsx  index.css
web-test/src/api/: argus.js
web-test/src/components/: Footer.jsx  Navbar.jsx  RiskBadge.jsx  ScoreGauge.jsx  SectionHeader.jsx
web-test/src/hooks/: useAlertFeed.js  useArgusScore.js  useThreatMap.js
web-test/src/sections/: AlertFeed.jsx  CallToAction.jsx  Features.jsx  Hero.jsx  HowItWorks.jsx  LiveDemo.jsx  ThreatMap.jsx
website/: index.html  package-lock.json
website/src/: App.jsx  index.css
website/src/components/: Footer.jsx  Gauge.jsx  Navbar.jsx
website/src/sections/: Hero.jsx  Install.jsx  Output.jsx  Pipeline.jsx  Signals.jsx
