[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "argus"
version = "0.1.0"
description = "AI-powered insider threat and anomalous user behavior detection"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["security", "insider-threat", "anomaly-detection", "cybersecurity", "ueba"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
ml        = ["scikit-learn>=1.3"]
api       = ["fastapi>=0.138", "uvicorn>=0.29"]
dashboard = [
    "streamlit>=1.35",
    "plotly>=5.20",
    "requests>=2.31",
    "streamlit-autorefresh>=1.0",
]
network   = ["pyshark>=0.6"]
files     = ["watchdog>=4.0"]
dev       = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "scikit-learn>=1.3",
    "fastapi>=0.138",
    "uvicorn>=0.29",
    "httpx>=0.27",
]
all       = [
    "scikit-learn>=1.3",
    "fastapi>=0.138",
    "uvicorn>=0.29",
    "streamlit>=1.35",
    "plotly>=5.20",
    "requests>=2.31",
    "streamlit-autorefresh>=1.0",
    "pyshark>=0.6",
    "watchdog>=4.0",
]

[project.scripts]
argus-serve     = "argus.api.server:run"
argus-dashboard = "argus.dashboard.app:main"

[tool.setuptools.packages.find]
include = ["argus*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[tool.ruff]
line-length    = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
